# robotron-esp-vga

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fix-vscode-error.md  howto_create_binary_image.txt  partitions.csv  sdkconfig  sdkconfig.old  vga-adapter-main.c
components/vga-adapter/: CMakeLists.txt  capture.c  globalvars.c  highint5.S  idf_component.yml  main.c  nvs.c  osd.c  pins.h  vga.c  webserver.c  wlan.c
components/vga-adapter-1715/: CMakeLists.txt  vga-adapter-1715.c  vga-adapter-1715_.c
components/vga-adapter/include/: capture.h  globalvars.h  main.h  nvs.h  osd.h  pins.h  vga.h  webserver.h  wlan.h
